[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/dialog_maker/scenes/ChoiceEditor.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/dialog_maker/scenes/ConditionEditor.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/dialog_maker/scenes/SecuenceEditor.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/dialog_maker/scripts/tree_editor/editor_dock.gd" type="Script" id=4]

[node name="DialogEditor" type="PanelContainer"]
margin_right = 127.0
margin_bottom = 130.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 7.0
margin_top = 58.0
margin_right = 120.0
margin_bottom = 72.0
text = "No node selected"
align = 1
valign = 2

[node name="SecuenceEditor" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 307.0
margin_bottom = 123.0

[node name="ChoiceEditor" parent="." instance=ExtResource( 1 )]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 307.0
margin_bottom = 157.0

[node name="ConditionEditor" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 307.0
margin_bottom = 157.0
